<resources>
    <string name="app_name">DisplayToast</string>
    <string name="dounload">Panthera is a genus within the family Felidae that was named and described by Lorenz Oken in 1816 who placed all the spotted cats in this group.[4][5] Reginald Innes Pocock revised the classification of this genus in 1916 as comprising the tiger (P. tigris), lion (P. leo), jaguar (P. onca), and leopard (P. pardus) on the basis of common cranial features.[6] Results of genetic analysis indicate that the snow leopard (formerly Uncia uncia) also belongs to the genus Panthera (P. uncia),
        a classification that was accepted
        by IUCN Red List assessors in 2008
   """ In Panthera species, the dorsal profile of the skull is flattish or evenly convex. The frontal interorbital area is not noticeably elevated, and the area behind the
        elevation is less steeply sloped. The basicranial axis is nearly horizontal. The inner chamber of the bullae is large, the outer small. The partition between them is close to the external auditory meatus.
        The convexly rounded chin is sloping.[10] All Panthera species have an incompletely ossified hyoid bone.
        A specially adapted larynx with proportionally larger vocal folds is covered in a large fibro-elastic pad. These characteristics enable them to roar. Only the snow leopard cannot roar, as it has shorter
        vocal folds of 9 mm (0.35 in) that provide a lower resistance to airflow; it was therefore proposed to be retained in the genus Uncia.[11] Panthera species can prusten, which is a short, soft, snorting sound;
        it is used during contact between friendly individuals.
        The roar is an especially loud call with a distinctive pattern that depends on the species"""</string>
    <string name="upload">upload</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="i_am_prawtaar">I Am Prawtaar</string>
    <string name="todo">TODO</string>
</resources>